# bingocpp

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  README.txt  __init__.py  build.sh  module_test.py
app/: agraph_pymodule.cpp  bingocpp_pymodule.cpp  driver.cpp  evaluation_backend_pymodule.cpp  fitness_benchmarks.cpp  performance_benchmarks.cpp  performance_benchmarks.h  simplification_backend_pymodule.cpp  step_profile.cpp  symbolic_regression_pymodule.cpp  utils_pymodule.cpp
cmake/: CMakeLists.txt.eigen  CMakeLists.txt.pybind11
depricated/: agraph_nodes_tests.cpp  fitness_metric.cpp  fitness_metric.h  training_data_tests.cpp
doc/: doxy.config
doc/html/: acyclic__graph_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dcbc573d067b13a200a39ad3adabc01a.html  files.html  globals.html  globals_func.html  index.html  version_8h_source.html
doc/html/search/: all_0.js  all_2.js  all_5.js  all_6.js  all_7.js  files_1.js  functions_0.js  functions_1.js  searchdata.js
include/BingoCpp/: AGraph.hh  acyclic_graph.h  acyclic_graph.hh  acyclic_graph_nodes.h  agraph.h  agraph_crossover.h  agraph_maps.h  backend.h  backend_nodes.h  constants.h  equation.h  explicit_regression.h  fitness_function.h  fitness_metric.h  gradient_mixin.h  graph_manip.h  implicit_regression.h  testing_utils.h  training_data.h  utils.h  version.h  version.hh
include/benchmarking/: benchmark_data.cpp  benchmark_data.h  benchmark_logging.cpp  benchmark_logging.h
include/bingocpp/: agraph.h  agraph_crossover.h  backend.h  constants.h  equation.h  explicit_regression.h  fitness_function.h  implicit_regression.h  training_data.h  version.h
include/bingocpp/agraph/: agraph.h  agraph_crossover.h  agraph_maps.h  constants.h  operator_definitions.h  string_generation.h
include/bingocpp/agraph/evaluation_backend/: evaluation_backend.h  operator_eval.h
include/bingocpp/agraph/simplification_backend/: expression.h  simplification_backend.h
include/bingocpp/evaluation_backend/: evaluation_backend.h  operator_eval.h
include/python/: py_equation.h  py_gradient_mixin.h
src/: AGraph.cc  acyclic_graph.cc  acyclic_graph.cpp  acyclic_graph_nodes.cc  acyclic_graph_nodes.cpp  agraph.cpp  agraph_crossover.cpp  backend.cpp  backend_nodes.cpp  bingocpp_pymodule.cc  bingocppmodule.cc  driver.cc  explicit_regression.cpp  fitness_metric.cc  fitness_metric.cpp  gradient_mixin.cpp  graph_manip.cc  graph_manip.cpp  implicit_regression.cpp  test.cc  training_data.cc  training_data.cpp  utils.cc  utils.cpp
src/agraph/: agraph.cpp  agraph_crossover.cpp
src/agraph/evaluation_backend/: evaluation_backend.cpp  operator_eval.cpp
src/agraph/simplification_backend/: expression.cpp  simplification_backend.cpp
src/evaluation_backend/: evaluation_backend.cpp  operator_eval.cpp
test/: AGraph_tests.cc  Agraph_tests.cc  acyclic_graph_tests.cc  agcpp_tests.cc  example.cc  fitness_tests.cc  step_profile.cc  test_main.cc  training_data_tests.cc
tests/: acyclic_graph_tests.cpp  agcpp_tests.cpp  agraph_backend_tests.cpp  agraph_crossover_tests.cpp  agraph_nodes_tests.cpp  agraph_tests.cpp  backend_nodes_tests.cpp  explicit_regression_tests.cpp  expression_tests.cpp  fitness_function_tests.cpp  fitness_tests.cpp  gradient_mixin_tests.cpp  graph_manip_tests.cpp  implicit_regression_tests.cpp  test_fixtures.h  testing_utils.h  training_data_tests.cpp  utility_function_tests.cpp
